--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,31 @@
+Makefile
+inc/
+.c
+ppport.h
+*.sw[po]
+*.bak
+*.old
+*~
+Build
+_build/
+xshelper.h
+tags
+pm_to_blib
+blib/
+META.yml
+MYMETA.*
+META.yml
+README
 /.build/
-/_build/
-/carton.lock
-/.carton/
+carton.lock
 /local/
+/.carton/
 /nytprof.out
 /nytprof/
+/_build_params
+.build
+_build_params
 /Build
-
+!Build/
+!META.json
+/.build
