--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: perl
 perl:
   - 5.16
   - 5.14
-
+before_install:
+  - cpanm Devel::Cover::Report::Coveralls
+script: perl Build.PL && ./Build build && cover -test
+after_success:
+  - cover -report coveralls
