--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ perl:
   - 5.16
   - 5.14
 before_install:
-  - cpanm Devel::Cover::Report::Coveralls || { cat ~/.cpanm/build.log ; false ; }
+  - cpanm -n Devel::Cover::Report::Coveralls
 script: perl Build.PL && ./Build build && cover -test
 after_success:
   - cover -report coveralls
