--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,4 @@ perl:
   - 5.14
 before_install:
   - cpanm -n Devel::Cover::Report::Coveralls
-script: perl Build.PL && ./Build build && cover -test
-after_success:
-  - cover -report coveralls
+script: perl Build.PL && ./Build build && cover -test -report coveralls
