--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -30,18 +30,17 @@ jobs:
       - name: perl -V
         run: perl -V
       - name: Install dependencies
-        run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-develop --with-configure --show-build-log-on-failure
+        run: |
+            curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-develop --with-configure --show-build-log-on-failure
+            curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Devel::Cover::Report::Coveralls
+            cover -test
       - name: Run build
-        run: perl Build.PL
-      - name: Build manifest
-        run: ./Build manifest
-      - name: Run test
-        run: ./Build test
+        run: |
+            perl Build.PL
+            ./Build build
       - name: Run Cover
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
-            curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Devel::Cover::Report::Coveralls
-            cover -test
-            cover -report coveralls
+            cover -test -report coveralls
         if: matrix.perl-version == 'latest'
