--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,15 +28,16 @@ jobs:
       - name: perl -V
         run: perl -V
       - name: Install dependencies
-        run: |
-            curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-develop --with-configure --show-build-log-on-failure
-            curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Devel::Cover::Report::Coveralls
+        run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-develop --with-configure --show-build-log-on-failure
       - name: Run build
         run: |
             perl Build.PL
             ./Build build
+            ./Build test
       - name: Run Cover
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        run: cover -test -report coveralls
+        run: |
+            curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Devel::Cover::Report::Coveralls
+            cover -test -report coveralls
         if: matrix.perl-version == 'latest'
