--- a/.drone.yaml
+++ b/.drone.yaml
@@ -11,7 +11,7 @@ steps:
       COVERALLS_PARALLEL: true
     commands:
       - cpanm --quiet --installdeps --notest .
-      - Build.PL && ./Build build && cover -test -report coveralls
+      - ./Build build && cover -test -report coveralls
 ---
 kind: pipeline
 name: Build_2
@@ -26,7 +26,7 @@ steps:
       COVERALLS_PARALLEL: true
     commands:
       - cpanm --quiet --installdeps --notest .
-      - Build.PL && ./Build build && cover -test -report coveralls
+      - ./Build build && cover -test -report coveralls
 ---
 
 kind: pipeline
