fixed tests, added support for pull requests

--- a/.drone.yaml
+++ b/.drone.yaml
@@ -8,6 +8,7 @@ steps:
       COVERALLS_REPO_TOKEN:
         from_secret: COVERALLS_REPO_TOKEN
       COVERALLS_FLAG_NAME: test00
+      COVERALLS_PARALLEL: true
     commands:
       - cpanm --quiet --installdeps --notest .
       - perl Build.PL build && ./Build
@@ -23,6 +24,7 @@ steps:
       COVERALLS_REPO_TOKEN:
         from_secret: COVERALLS_REPO_TOKEN
       COVERALLS_FLAG_NAME: test01
+      COVERALLS_PARALLEL: true
     commands:
       - cpanm --quiet --installdeps --notest .
       - perl Build.PL build && ./Build
@@ -33,14 +35,13 @@ kind: pipeline
 name: Coveralls_webhook_done
 
 steps:
-  - name: send_done2
+  - name: send_done
     image: plugins/webhook
-    environment:
-      COVERALLS_REPO_TOKEN:
-        from_secret: COVERALLS_REPO_TOKEN
     settings:
-      urls: https://coveralls.io/webhook?repo_token=${COVERALLS_REPO_TOKEN}
+      urls:
+        from_secret: COVERALLS_WEBHOOK_URL
       content_type: application/json
+      debug: true
       template: |
         {
           "payload": {
